# TestPilot-QA-for-AI-Agents

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE-GENERATED.md  DESIGN-PROMPT.md  LICENSE  NEXT-STEPS.md  README.md  params.json  pyproject.toml
.github/workflows/: ci.yml
agents/fixer/: entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml  uipath.json
agents/triage/: entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml  uipath.json
dashboard/: app.js  fleet.json  index.html  package-lock.json  package.json  playwright.config.mjs  results.json  simple.html  styles.css  tp.spec.mjs
docs/: CLOUD-RUNBOOK.md  COMPLIANCE-CHECKLIST.md  DEMO-RUNBOOK.md  DEMO-SCRIPT.md  EXECUTION-PLAN.md  SUBMISSION-CONTENT.md  SYSTEM-DESIGN.md  TESTPILOT-PLAN.md
docs/agent-sessions/: uip-skills-install.md
scripts/: build_agents.py  build_dashboard.py  demo.py  gen_fleet_data.py
src/testpilot/: escalation_payload_builder.py  eval_result_parser.py  git_pr_runner.py  llm.py  models.py  pipeline.py  selector_fixer.py  triage_classifier.py
src/testpilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_agents_entrypoints.py  test_contract.py  test_escalation_payload_builder.py  test_eval_result_parser.py  test_git_pr_runner.py  test_integration_smoke.py  test_llm_gateway.py  test_pipeline.py  test_selector_fixer.py  test_triage_classifier.py
tests/fixtures/: golden-entry-points.json  junit_green.xml  junit_red.xml  maestro-mapping.json  seed_all.json  seed_drift.json  seed_flaky.json  seed_regr.json
(+1 files in other folders)
