[project]
name = "testpilot"
version = "0.1.0"
description = "TestPilot — the on-call QA engineer for AI agents (UiPath AgentHack, Track 3)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["pydantic>=2"]

[project.optional-dependencies]
runtime = ["anthropic>=0.40"]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
